derive_tests/tests/compile_fail/unexpected_name_value.rs
use validify::Validate;

#[derive(Validate)]
struct Email {
    #[validate(not_a = "validator")]
    email: String,
}

fn main() {}
