derive_tests/tests/compile_fail/unexpected_name_value.stderr
error: Uncrecognized validate parameter
 --> tests/compile_fail/unexpected_name_value.rs:5:16
  |
5 |     #[validate(not_a = "validator")]
  |                ^^^^^
